# AbbottTheOctopus

./: .env.example  .gitignore  arms_main.py  commandline_main.py  direct_control_main.py  docker-compose.yml  eyes_main.py  gc9a01-configurable-README.md  gc9a01-configurable.dts  graphical_stubs.py  main.py  pyproject.toml  reaction_state_manager.py  requirements.txt  setup.md  tentacle_control.py  zoom_receiver_main.py
arms/: arm_animation.py  arm_controler.py  big_wave_animation.py  brainrot_animation.py  idle_animation.py  raise_arms_animation.py  shocked_arms_animation.py  thumbs_up_animation.py
backend/: package-lock.json
backend/api/zoomapp/: controller.js
eyes/: SETUP.md  animation.py  display.py  eye_controllers.py  eye_controllers_displayio.py  eye_controllers_fb.py  main.py  moving_eyes.py  sample_image.py  sample_image_displayio.py  sample_image_jpg.py  sample_image_pil.py
eyes/adafruit-demo/lib/: adafruit_gc9a01a.mpy
eyes/animations/: animation.py  brainrot.py  excited.py  eye_image.py  heart.py  moving_eyes.py  thumbs_up.py  winky.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
python-receiver/: .gitignore
zoomapp/: .env.example  README.md  docker-compose.yml
zoomapp/backend/: package-lock.json  package.json
zoomapp/backend/api/zoomapp/: controller.js  router.js
zoomapp/frontend/: package-lock.json
zoomapp/frontend/src/: App.js  apis.js
zoomapp/frontend/src/components/: ApiScrollview.js  Authorization.js
zoomapp/python-receiver/: README.md  app.py
